hphp/hack/test/typecheck/class_pointers/string_cast.php.exp
ERROR: File "string_cast.php", line 6, characters 3-18:
Cannot cast a value of type `class<C>` to string. Only primitives may be used in a `(string)` cast. (Typing[4281])
