hphp/hack/test/typecheck/class_pointers/string_cast.php
<?hh

class C {}

function f(): void {
  (string)C::class;
}
